--- a/index.html
+++ b/index.html
@@ -12,14 +12,29 @@
     />
   </head>
   <body>
-    <header>
-      <h1>Hello World 123</h1>
+    <header class="header">
+      <div class="header__nav">
+        <img src="./images/logo.svg" alt="" />
+        <nav>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="">Community</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Events</a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <div>
+        <input type="search" />
+        <a href="/login">Log in</a>
+      </div>
     </header>
     <main>
       <section class="hero"></section>
       <div class="clients"></div>
       <section class="whats-netbooks"></section>
-      <section class="comunity"></section>
+      <section class="community"></section>
       <section class="members"></section>
       <section class="app"></section>
       <section class="news"></section>
