--- a/index.html
+++ b/index.html
@@ -13,21 +13,34 @@
   </head>
   <body>
     <header class="header">
-      <div class="header__nav">
-        <img src="./images/logo.svg" alt="" />
-        <nav>
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="">Community</a></li>
-            <li><a href="">Blog</a></li>
-            <li><a href="">Events</a></li>
-          </ul>
-        </nav>
-      </div>
+      <img
+        src="./images/logo.svg"
+        alt="Logo for the company Netbook and is a circle split diagonal with orange and yellow section and a line with a dot in the end"
+        width="145"
+        height="35"
+      />
+      <nav class="header__nav">
+        <ul>
+          <li><a href="#" class="active">Home</a></li>
+          <li><a href="">Community</a></li>
+          <li><a href="">Blog</a></li>
+          <li><a href="">Events</a></li>
+        </ul>
+      </nav>
 
-      <div>
-        <input type="search" />
-        <a href="/login">Log in</a>
+      <div class="header__actions">
+        <form action="" class="header__search">
+          <img
+            src="./images/icon-search.svg"
+            alt="Maginify glass icon for search"
+          />
+          <input
+            type="search"
+            aria-label="search"
+            placeholder="Search here..."
+          />
+        </form>
+        <a href="/login" class="btn">Log in</a>
       </div>
     </header>
     <main>
